Added Image Uploading for Creating Posts. Also added image functionality for editPost. Added a utility endpoint for interests. Edited documentation.
